# backend-server

./: .env.example  .gitignore  AGENTS.md  LICENSE  architecture_analysis_v3.md  backend_requirement_doc.md  ecosystem.config.cjs  package.json  백엔드 코드 요구 명세서.md
ai_server/: config.py  main.py  pyproject.toml  requirements.txt
ai_server/models/: schemas.py
ai_server/routers/: analyze.py  embed.py
ai_server/scripts/: build_catapi_anchor_dataset.py  build_final_quality_report_nohuman_v1.py  build_real_dataset_from_cat00.py  check_ai_provider_status.py  create_real_gt_v2_human_template.py  evaluate_anchor_set.py  extract_ai_misclassifications.py  generate_ai_quality_dataset_100.py  generate_real_gt_v1_5_with_claude.py  generate_real_pseudolabel_v3.py  merge_prediction_results.py  predict_labels_for_real_dataset.py  probe_breed_classifier.py  run_ai_quality_batch.py  run_nohuman_quality_v1.py  run_real_data_quality_v1.py  validate_ai_quality_dataset.py  validate_real_gt_v2_human.py
ai_server/services/: breed_classifier.py  embedder.py  feature_augmentor.py  vector_search.py
ai_server/tests/: test_analyze_validation.py  test_embed_mock.py
ai_server/workers/: ai_worker.py
implementation_specs/: 01_execution_rules.md  02_phase_plan.md  03_server_swagger_requirement.md  04_current_state_assessment.md  05_remediation_workspec.md  06_tips_queue_strategy_decision.md  07_nginx_validation_report.md  08_ai_quality_batch_report.md  09_ai_quality_batch_result.json  09_ai_quality_batch_result.md  10_future_work_plan.md  11_misclassification_top10.md  18_anchor_eval_result.json  (+32 more)
(+69 files in other folders)
